--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <script src="js/comm.js" charset="utf-8" ></script>
     <script src="js/jquery-1.11.1.js" ></script>
     
-    <title>idnex</title>
+    <title>首页</title>
 </head>
 
 <body onload="Index.setTarget()">
     <div class="M-lf-area">
-        <ul class="js_first_ul">
+        <ul class="js_first_ul" onselectstart="return false;" unselectable="on">
+            <li>
+                <a href="page/test.html">首页</a>
+            </li>
             <li>
                 <a class="" href="page/test.html">111</a>
                 <ul>
@@ -23,7 +26,7 @@
                 </ul>
             </li>
             <li>
-                <a>111</a>
+                <a href="page/qwqw.html">111</a>
             </li>
         </ul>
     </div>
