--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <link type="text/css" href="css/comm.css" rel="stylesheet" />
     <link type="text/css" href="css/index.css" rel="stylesheet" />
-    <script src="js/index.js" charset="utf-8" ></script>
-    <script src="js/comm.js" charset="utf-8" ></script>
-    <script src="js/jquery-1.11.1.js" ></script>
-    
+    <script src="js/index.js" charset="utf-8"></script>
+    <script src="js/comm.js" charset="utf-8"></script>
+    <script src="js/jquery-1.11.1.js"></script>
+
     <title>首页</title>
 </head>
 
@@ -18,15 +18,26 @@
                 <a href="page/test.html">首页</a>
             </li>
             <li>
-                <a class="" href="page/test.html">111</a>
+                <a class="" href="page/test.html">html例子</a>
                 <ul>
                     <li>
-                        <a href="page/test.html">222</a>
+                        <a href="page/switch.html">仿ios开关控件</a>
+                    </li>
+                    <li>
+                        <a href="page/radio.html">不用js实现单选菜单功能</a>
                     </li>
                 </ul>
             </li>
             <li>
-                <a href="page/qwqw.html">111</a>
+                <a href="page/qwqw.html">js</a>
+                <ul>
+                    <li>
+                        <a>asd</a>
+                    </li>
+                    <li>
+                        <a>asd</a>
+                    </li>
+                </ul>
             </li>
         </ul>
     </div>
